conf/ingestion/http_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-http-service
spec:
  type: LoadBalancer
  ports:
    - name: httpinput
      protocol: TCP
      port: 8090
      targetPort: 8090
  selector:
    app: ingestion-http
