conf/ingestion/http_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion-http-ingress
spec:
  rules:
    - host: ingestion.punchplatform.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingestion-http-service
                port:
                  number: 8090
  ingressClassName : nginx
